--- a/french/international/french/debian-l10n-french-faq.html/ch1.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch1.html
@@ -60,7 +60,7 @@ Pour contribuer, me contacter directement ou poster sur
 
 <p>
 J'ai essayé, suite à différentes remarques, de satisfaire tout le monde.  Du
-coup, chaque point important est divisisé en deux parties&nbsp;: une partie
+coup, chaque point important est divisé en deux parties&nbsp;: une partie
 destinée à celui qui a besoin de l'information rapidement et sans fioriture et
 une autre plus développée avec explications techniques à la clé.
 </p>
@@ -102,13 +102,13 @@ SUJET&nbsp;:
 </h2>
 
 <p>
-À coups de poing virtuels, bien sûr &nbsp;:-)
+À coups de poings virtuels, bien sûr&nbsp;:-)
 
 <p>
-En fait, en cas de désaccord sur une traduction (un terme, un sens
-général,...), on fait un vote des gens inscrits.  Un inscrit participant vaut
-une voix.  Tout le reste ne vaut rien.  Personne ne vaut plus qu'un autre.  La
-démocratie, quoi &nbsp;:-).
+En fait, en cas de désaccord sur une traduction (un terme, un sens général...),
+on fait un vote des gens inscrits.  Un inscrit participant vaut une voix.  Tout
+le reste ne vaut rien.  Personne ne vaut plus qu'un autre.  La démocratie,
+quoi&nbsp;:-).
 
 <p>
 Bon, le tout est d'arriver à un consensus pour pouvoir continuer.  Ne pas
@@ -116,15 +116,15 @@ oublier quand même que l'on n'est pas là pour se battre sur la terminologie
 mais pour faire avancer la francisation de Debian.
 
 <p>
-Le pouvoir ici se résume à la traduction de document en français.  Et
+Le pouvoir ici se résume à la traduction de documents en français.  Et
 uniquement cela.  Pour tout le reste du projet Debian, la liste ici n'a aucun
 pouvoir.
 
 <p>
 Il y a quand même une règle non écrite en cas de litige profond&nbsp;:
 <em>c'est au final toujours celui qui est l'auteur du document qui peut imposer
-son point de vue en vertue du fait que c'est lui qui a fait l'effort de créer
-le premier document</em>.  Bien sûr, il est rare d'en arriver à de telles
+son point de vue en vertu du fait que c'est lui qui a fait l'effort de créer le
+premier document</em>.  Bien sûr, il est rare d'en arriver à de telles
 extrémités...
 </p>
 
@@ -149,8 +149,8 @@ de façon à faciliter la maintenance des projets de traductions.
 </h2>
 
 <p>
-Faible.  Quelques messages par semaine, sauf les jours de grands débats
-&nbsp;:-).  Cela dit, cela a notablement augmenté ces derniers temps.  La
+Faible.  Quelques messages par semaine, sauf les jours de grands
+débats&nbsp;:-).  Cela dit, cela a notablement augmenté ces derniers temps.  La
 rançon du succès&nbsp;?
 
 <p>
@@ -240,14 +240,13 @@ Puis allez cliquer dans le mois-année qui vous intéresse dans
 <p>
 René Cougnenc fut un des précurseurs de Linux en France et il a contribué à sa
 diffusion par la qualité de ses traductions.  Un certain nombre d'ouvrages
-faisant encore figure de référence ont été traduits de sa main (liste chez
-O'Reilly).
+faisant encore référence ont été traduits de sa main (liste chez O'Reilly).
 
 <p>
 René nous a quitté il y a quelques années.
 
 <p>
-Comme ses traductions sont remarquables, nous y faisons souvent références.
+Comme ses traductions sont remarquables, nous y faisons souvent référence.
 </p>
 
 <hr>
@@ -262,7 +261,7 @@ Comme ses traductions sont remarquables, nous y faisons souvent références.
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.4<br>
+Version 1.5<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
