--- a/french/international/french/debian-l10n-french-faq.html/ch2.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch2.html
@@ -49,7 +49,7 @@ Il s'agit en fait de <code>html</code>.
 Enfin, il y a des documents plus particuliers comme les pages de manuels ou les
 logiciels spécifiques à Debian (comme <code>dpkg</code> ou <code>apt</code>).
 Pour le coup, il vaut mieux savoir un peu ce que l'on fait avant de se jeter
-sur ce type de traduction.  Pour plus de détail, voir le chapitre
+sur ce type de traduction.  Pour plus de détails, voir le chapitre
 «&nbsp;Traduire pour Debian (et pour le logiciel libre en général)&nbsp;».
 </p>
 
@@ -81,7 +81,7 @@ href="http://people.debian.org/~clebars/f2dp/translations/markup.fr.html/">http:
 </h2>
 
 <p>
-De préférence une traduction qui ne soit pas en cours ou maintenu activement
+De préférence une traduction qui ne soit pas en cours ou maintenue activement
 par quelqu'un.  Cela dépend un peu de vos compétences et de votre temps
 disponible.  Ne soyez pas trop gourmand au début&nbsp;: commencez par quelque
 chose de court pour vous faire la main.
@@ -107,7 +107,7 @@ l'information de la ligne
 translation_maintainer=&quot;aze&quot;</var>
 
 <p>
-du document.  C'est une en-tête obligatoire des documents comme l'indique le
+du document.  C'est un en-tête obligatoire des documents comme l'indique le
 document&nbsp;:
 
 <p>
@@ -157,7 +157,7 @@ approbation simple d'un des responsables des traductions et vous devenez
 automatiquement responsable de la traduction que vous avez choisie.  Vous en
 devenez aussi le responsable officiel, c'est-à-dire qu'il vous incombe de
 suivre le document original et de modifier la traduction le cas échéant.  Vous
-devez de plus rassembler les relectures qui vous seront adresssées sur la liste
+devez de plus rassembler les relectures qui vous seront adressées sur la liste
 et corriger votre texte en conséquence.
 
 <p>
@@ -180,13 +180,13 @@ Si quelqu'un s'occupe déjà du document, il le fera savoir.
 Il arrive qu'un traducteur n'ait plus le temps de poursuivre son travail.  Et
 vous avez envie de prendre la suite (le document a par exemple beaucoup de
 retard dans la mise à jour...).  Il vous suffit de contacter directement le
-mainteneur ou bien de vous déclarer sur la liste.  Dans ce dernier cas, il vous
-faudra attendre obligatoirement une confirmation d'un responsable qui
+responsable ou bien de vous déclarer sur la liste.  Dans ce dernier cas, il
+vous faudra attendre obligatoirement une confirmation d'un responsable qui
 contactera lui-même l'ancien responsable.
 
 <p>
 Il est d'usage de réattribuer une traduction si rien n'en est sorti au bout de
-deux mois et que le mainteneur officiel ne donne plus signe de vie.
+deux mois et que le responsable officiel ne donne plus signe de vie.
 </p>
 
 <hr>
@@ -227,7 +227,7 @@ Positionnez la variable CVSROOT correctement&nbsp;:
 </pre>
 
 <p>
-Pour éviter de le faire à chaque fois, inscrivez-la en dure dans votre fichier
+Pour éviter de le faire à chaque fois, inscrivez-la en dur dans votre fichier
 de configuration de <code>shell</code> par défaut.  Si vous ne savez pas ce que
 vous utilisez, mettez-le par défaut dans votre ~/.bashrc.
 
@@ -286,10 +286,10 @@ Le répertoire <em>french</em> est lui plus petit (4,8 Mo le 14 octobre 2001).
 <p>
 Il faut récupérer le document original sur le <code>cvs</code> de Debian au
 format <code>sgml</code> pour un document et <code>wml</code> pour une page
-oueb.  Le document est alors en ASCII (8 bits donc vous pouvez utiliser les
-accents).  Vous pouvez donc l'éditer avec n'importe quel (bon) éditeur de
-texte.  Ceux qui permettent la mise en couleur de balises favorisent évidemment
-le travail du traducteur-relecteur.
+oueb.  Le document est alors en ASCII étendu (8 bits (iso-latin1) donc vous
+pouvez utiliser les accents).  Vous pouvez donc l'éditer avec n'importe quel
+(bon) éditeur de texte.  Ceux qui permettent la mise en couleur de balises
+favorisent évidemment le travail du traducteur-relecteur.
 
 <p>
 Si vous ne connaissez rien aux éditeurs de texte, j'ai fait une introduction à
@@ -312,7 +312,7 @@ href="http://people.debian.org/~bortz/SGML-HOWTO/potato/x323.html">http://people
 Si vous partez d'un document vierge, il suffit de coller au document original
 en respectant scrupuleusement les balises initiales.  Tout ce qui est à
 l'extérieur des balises doit être traduit.  Les balises doivent toutes être
-conservées.  À l'exception de l'attribut <code>name</code> dela balise
+conservées.  À l'exception de l'attribut <code>name</code> de la balise
 <code>url</code> qui doit être traduit.
 </p>
 
@@ -382,8 +382,8 @@ Et c'est tout.
 
 <p>
 Tout d'abord, vous devez avoir installé le paquet <code>debiandoc-sgml</code>
-(<em>cf.</em> «&nbsp;Quels sont les paquets Debian nécessaires à la compilation
-d'un document&nbsp;?&nbsp;»).
+(cf.  «&nbsp;Quels sont les paquets Debian nécessaires à la compilation d'un
+document&nbsp;?&nbsp;»).
 
 <p>
 Vous devez avoir sur votre système la série d'utilitaires suivante&nbsp;:
@@ -417,7 +417,7 @@ commande suivante&nbsp;:
 <p>
 Si le document compile sans erreur, vous obtiendrez alors dans le répertoire en
 cours le document <code>MonDocument.ps</code> en PostScript.  Il en va de même
-pour tous les formats de conversions.
+pour tous les formats de conversion.
 
 <p>
 Si la compilation tourne mal, <code>debiandoc2xxx</code> s'arrête et renvoie
@@ -453,14 +453,16 @@ l'annotation des erreurs et compilez-le vous même.  Reportez-vous à la question
 <p>
 Si votre système d'impression est bien configuré sous votre Debian, la méthode
 la plus rapide consiste à obtenir du <code>dvi</code>.  Vous pourrez l'imprimer
-directement.  Sinon, utilisez du PostScript ou du <code>pdf</code> suivant
-votre environnement.
+directement en tapant tout simplement la commande <code>lpr</code>.  Sinon,
+utilisez du PostScript ou du <code>pdf</code> suivant la configuration de votre
+environnement.  Si vous n'y arrivez pas, faîtes-vous aider pour la
+configuration de votre système.
 
 <p>
 Il n'y a rien d'analogue pour les pages du site au format <code>wml</code>.
 Vous pouvez toujours les éditer dans un butineur <code>html</code> et tenter de
-l'imprimer directement.  Sachez toutefois qu'il existera toujours une ligne en
-en-tête du document, du genre&nbsp;:
+les imprimer directement.  Sachez toutefois qu'il existera toujours une ligne
+en en-tête du document, du genre&nbsp;:
 
 <p>
 <var>#use wml::debian::template title=&quot;Lexique du projet de traduction de
@@ -645,11 +647,16 @@ très bien la faire relire par d'autres personnes complètement extérieures.
 Mais elle doit être obligatoirement postée sur la liste.
 
 <p>
-Le document doit être posté tel quel et inclus dans le corps du message.  Il
-faut indiquer le nom du document et aussi sa révision, en demandant sa
-relecture.  Sauf empêchement majeur, le document sera archivé rapidement sur le
-<code>cvs</code> de Debian en l'état, à charge au mainteneur responsable de
-centraliser les relectures et d'apporter les modifications nécessaires.  Il
+Le document doit être posté tel quel et dans la mesure du possible livré en
+attaché (pour faciliter un traitement ultérieur automatique).  Il serait aussi
+pratique de positionner le type MIME en <em>text/plain</em> avec un encodage
+favorisant une intervention directe comme le 8 bits (éviter l'uuencodage si
+possible).  Si vous êtes sous Linux, créez un fichier
+<code>$HOME/.mime.types</code> contenant <em>text/plain wml diff patch</em>
+devrait suffire.  Il faut indiquer le nom du document et aussi sa révision, en
+demandant sa relecture.  Sauf empêchement majeur, le document sera archivé
+rapidement sur le <code>cvs</code> de Debian en l'état, à charge au responsable
+de centraliser les relectures et d'apporter les modifications nécessaires.  Il
 pourra alors déposer une nouvelle version qui mettra ainsi à jour le
 <code>cvs</code> de Debian jusqu'au document final.
 
@@ -726,7 +733,7 @@ d'appliquer rapidement les modifications et que l'envoi du fichier est allégé
 </h2>
 
 <p>
-Vous devez postez la relecture comme une demande de relecture (de préférence
+Vous devez poster la relecture comme une demande de relecture (de préférence
 dans le corps du message, sans attaché ni compression).  Si vous avez conservé
 l'envoi original de demande de relecture, faîtes un
 «&nbsp;<em>reply-to</em>&nbsp;» sur le courriel original.  Sinon, mettez un
@@ -812,7 +819,7 @@ le lexique Debian et les traducteurs doivent alors s'y conformer.
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.4<br>
+Version 1.5<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
