--- a/french/international/french/debian-l10n-french-faq.html/ch3.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch3.html
@@ -36,7 +36,7 @@ logiciels libres
 
 <p>
 Ce chapitre est l'oeuvre de Martin Quinson&nbsp;: il a été publié originalement
-dans la <em>Foire aux questions</em> de <em>debian-french</em>.  Je le reprend
+dans la <em>Foire aux questions</em> de <em>debian-french</em>.  Je le reprends
 à mon compte à présent.
 </p>
 
@@ -108,8 +108,8 @@ la langue de l'utilisateur.  Pour ceux qui veulent en savoir plus sur comment
 paquet <code>gettext-doc</code>).
 
 <p>
-Évidement, pour que cela marche, il faut bien que quelqu'un traduise lesdits
-catalogues de messages.  L'objectif de ce document est entre autre d'expliquer
+Évidemment, pour que cela marche, il faut bien que quelqu'un traduise lesdits
+catalogues de messages.  L'objectif de ce document est entre autres d'expliquer
 comment le faire.  Nous reviendrons sur ce point dans une partie ultérieure.
 </p>
 
@@ -129,8 +129,8 @@ l'utilisateur fournis (en html ou autre) par certains paquets.
 Mais pour tout cela, il n'y a rien de bien fixé.  Pas de belles procédures pour
 savoir si la traduction est à jour.  Et pour être honnête, pour l'instant,
 chaque projet développe sa propre méthode sans qu'aucun plan général ne se
-dégage jusqu'à présent.  Je n'en parlerais donc pas dans ce document.  On a
-déjà assez à faire avec le reste.
+dégage jusqu'à présent.  Je n'en parlerai donc pas dans ce document.  On a déjà
+assez à faire avec le reste.
 </p>
 
 <hr>
@@ -270,7 +270,7 @@ choisie.
 <p>
 Il y a aussi un mécanisme pour vérifier que la traduction est à jour, et
 indiquer au visiteur si la traduction qu'il voit est obsolète, ainsi que pour
-prévenir le traducteur qu'il doit mettre son travail à jour.  Plus de détails à
+prévenir le traducteur qu'il doit mettre son travail à jour.  Plus de détails
 sur la page <code><a
 href="http://www.debian.org/devel/website/">http://www.debian.org/devel/website/</a></code>.
 </p>
@@ -385,7 +385,7 @@ vraiment prêt à ce que tout ce qu'il est possible de traduire le soit.  Il est
 impossible de lui préciser quelles langues on veut avoir sur la machine, et le
 résultat, c'est qu'il installe plein de trucs dont la plupart des gens n'ont
 aucune utilité.  Allez visiter le répertoire <var>/usr/share/locale/</var> sur
-votre machine.  C'est la que sont placé les fichiers <code>po</code> compilés
+votre machine.  C'est là que sont placés les fichiers <code>po</code> compilés
 prêts à l'emploi.  Il y a plusieurs dizaines de méga-octets utilisés pour avoir
 les messages en russe ou en coréen, ce que je suis bien incapable d'exploiter.
 Alors comme je suis un peu juste en place, je fais le nettoyage à la main de
@@ -436,8 +436,9 @@ moyen simple de s'en rendre compte.
 
 <p>
 <li>
-<em>Entre traducteurs et mainteneurs</em> &nbsp;: pour que les choses traduites
-soient incluses dans les paquets, et que les traductions restent à jour.
+<em>Entre traducteurs et responsables</em> &nbsp;: pour que les choses
+traduites soient incluses dans les paquets, et que les traductions restent à
+jour.
 </li>
 
 <p>
@@ -466,7 +467,7 @@ Pour résoudre ces problèmes, je propose les procédures suivantes&nbsp;:
 Les abonnés à la liste <em>debian-devel</em> connaissent les messages dont le
 titre commence par «&nbsp;ITP&nbsp;».  Il s'agit de «&nbsp;<em>Intend To
 Package</em>&nbsp;».  Ce sont des déclarations d'intention de mise en paquet.
-L'usage veut qu'on annonce sur la liste sont intention de créer un nouveau
+L'usage veut qu'on annonce sur la liste son intention de créer un nouveau
 paquet avant de se mettre au boulot, afin d'éviter que deux personnes se
 mettent à travailler sur la même chose dans leur coin.
 
@@ -478,9 +479,9 @@ les traductions vers le français, la liste est évidemment
 
 <p>
 Comme personne n'est parfait, il est possible que quelqu'un ait déjà traduit ce
-que vous comptiez traduire sans rien dire, et l'ait déjà renvoyé au mainteneur.
-Pour en avoir le coeur net, allez faire un tour sur la page des bogues du
-paquet pour lequel vous comptez travailler (<code><a
+que vous comptiez traduire sans rien dire, et l'ait déjà renvoyé au
+responsable.  Pour en avoir le coeur net, allez faire un tour sur la page des
+bogues du paquet pour lequel vous comptez travailler (<code><a
 href="http://bugs.debian.org/">http://bugs.debian.org/</a></code>nom_du_paquet),
 afin de vérifier qu'il n'y a pas de rapport de bogue contenant les traductions.
 </p>
@@ -495,7 +496,7 @@ afin de vérifier qu'il n'y a pas de rapport de bogue contenant les traductions.
 
 <p>
 <li>
-Avant de commencer à traduire, veuillez vous inscrire à la liste de
+Avant de commencer à traduire, veuillez-vous inscrire à la liste de
 coordination des traductions.  Dans le cas du français, il s'agit de
 <var>debian-l10n-french@lists.debian.org</var>
 </li>
@@ -534,7 +535,7 @@ faire un rapport de bogue contre le paquet de sévérité «&nbsp;souhait&nbsp;» ou
 avez traduit, et en attachant le matériel traduit.  Si vous êtes
 perfectionniste, vous pouvez surveiller la prochaine version du paquet pour
 voir si votre contribution a bien été prise en compte, et pour râler si ce
-n'est pas le cas, ou si le mainteneur a mis vos fichiers au mauvais endroit.
+n'est pas le cas, ou si le responsable a mis vos fichiers au mauvais endroit.
 </p>
 
 <hr>
@@ -557,7 +558,7 @@ considère qu'il y a plusieurs catégories de paquets&nbsp;:
 
 <p>
 <li>
-<em>Les paquets issus de projets ayant un projet de traduction bien établi</em>
+<em>Les paquets issus de projet ayant un projet de traduction bien établi</em>
 comme les programmes GNOME ou KDE.  Dans ce cas, je pense que le plus simple
 est de rejoindre le projet de traduction associé.  Voici la liste des plus gros
 projets de traductions (<em>i-e.</em>, ceux que je connais) vers lesquels il
@@ -606,10 +607,11 @@ contribuer à la source, et ne pas rester au sein de Debian.
 
 <p>
 <li>
-<em>Programmes indépendants ou rien n'est fait pour la traduction</em>.  Il
-s'agit sans doute des petits projets, qui n'ont pas les reins assez solide pour
-avoir une logistique de traduction en place.  Dans ce cas, on peut rester dans
-Debian (et espérer que le mainteneur enverra à la source nos traductions).
+<em>Programmes indépendants où rien n'est fait pour la traduction</em>.  Il
+s'agit sans doute des petits projets, qui n'ont pas les reins assez solides
+pour avoir une logistique de traduction en place.  Dans ce cas, on peut rester
+dans Debian (et espérer que le responsable enverra à la source nos
+traductions).
 </li>
 
 </ul>
@@ -673,7 +675,8 @@ un petit effort...
 </h3>
 
 <p>
-Vouloir traduire, c'est tres bien; savoir ce qu'on va traduire, c'est mieux.
+Vouloir traduire, c'est très bien&nbsp;; savoir ce qu'on va traduire, c'est
+mieux.
 
 <p>
 Il faut choisir la catégorie de matériel que l'on veut traduire&nbsp;:
@@ -705,9 +708,9 @@ doute, je peux toujours me référer au code source.  Maintenant, chacun est
 libre de faire comme bon lui semblera...
 
 <p>
-Une fois que vous avez choisi votre cible, que vous vous êtes assuré par la
-partie administrative que vous pouviez vous lancer et que vous avez récupéré
-votre cible, il reste à traduire la chose.  Voyons comment faire.
+Une fois que vous avez choisi votre cible, que vous êtes assuré par la partie
+administrative que vous pouviez vous lancer et que vous avez récupéré votre
+cible, il reste à traduire la chose.  Voyons comment faire.
 </p>
 
 <hr>
@@ -756,7 +759,7 @@ C'est une indication pour vous guider dans le travail de traduction&nbsp;:
 <samp>[T]ranslated</samp>:
 
 <p>
-Chaîne traduite; rien à faire.
+Chaîne traduite&nbsp;; rien à faire.
 </li>
 
 <p>
@@ -776,7 +779,7 @@ et enfin supprimer le marqueur «&nbsp;flou&nbsp;».
 <samp>[U]ntranslated</samp>:
 
 <p>
-Chaîne non traduite; à traduire.
+Chaîne non traduite&nbsp;; à traduire.
 </li>
 
 <p>
@@ -938,8 +941,8 @@ référence, vous pouvez rassembler le tout avec la commande
 
 <p>
 Un dernier mot au sujet de la syntaxe des <code>templates</code>&nbsp;: la
-première ligne de description est comme une en-tête.  Vous n'êtes pas autorisé
-à poursuivre la première ligne sur les suivantes.  Par exemple, le
+première ligne de description est comme un en-tête.  Vous n'êtes pas autorisé à
+poursuivre la première ligne sur les suivantes.  Par exemple, le
 <code>template</code> suivant est mauvais&nbsp;:
 
 <pre>
@@ -956,8 +959,9 @@ première ligne de description est comme une en-tête.  Vous n'êtes pas autorisé
 <p>
 La brève description s'étale sur deux lignes mais <code>debconf</code>
 n'utilisera que la première ligne comme descriptif rapide, et le reste comme
-descriptif détaillé.  Ainsi, ne faîtes pas de description rapide trop longue !
-Les spécifications imposent une limite de « 50 caractères au plus ».
+descriptif détaillé.  Ainsi, ne faîtes pas de description rapide trop
+longue&nbsp;!  Les spécifications imposent une limite de «&nbsp;50 caractères
+au plus&nbsp;».
 </p>
 
 <hr>
@@ -968,7 +972,7 @@ Les spécifications imposent une limite de « 50 caractères au plus ».
 
 <p>
 Les descriptions de paquets Debian sont les parties de texte explicatives
-concernant le-dit paquet.  Les descriptions à traduire sont souvent très
+concernant ledit paquet.  Les descriptions à traduire sont souvent très
 courtes, quelques lignes à peine, mais les traduire toutes est une tâche de
 longue haleine (prédiction&nbsp;: juillet 2003...&nbsp; date non contractuelle
 bien sûr).
@@ -1008,7 +1012,7 @@ aboutissants).
 Il vous suffit d'envoyer un courriel banal à
 <em>grisu-td@auric.debian.org</em>, en mettant dans le sujet du courriel votre
 commande, (comme par exemple <em>GET 1 fr</em>, laissez le corps du courriel
-vide).  Attendez quelques instants, puis vérifiez votre boîte à lettres
+vide).  Attendez quelques instants, puis vérifiez votre boîte aux lettres
 électroniques.  Voila, ce n'est pas plus compliqué que cela&nbsp;!
 
 <p>
@@ -1076,7 +1080,7 @@ n'envoie pas de nouvelles descriptions, l'état des traductions, <em>etc.</em>
 </h4>
 
 <p>
-Aprés avoir envoyé votre courriel, vous recevez un formulaire du serveur (Il
+Après avoir envoyé votre courriel, vous recevez un formulaire du serveur (Il
 s'agit d'une pièce jointe).  Sauvez la pièce jointe et ouvrez-la avec votre
 éditeur de texte favori.  Dans ce formulaire, vous découvrirez la description
 originale, en anglais donc, (ne la modifiez surtout pas, même si elle contient
@@ -1084,7 +1088,7 @@ des fautes) et le squelette de la traduction que vous allez faire.
 
 <p>
 Parfois deux descriptions différentes contiennent une phrase ou paragraphe
-identique, si le serveur a déjà réçu une traduction française d'un segment de
+identique, si le serveur a déjà reçu une traduction française d'un segment de
 texte identique (dans l'exemple qui suit&nbsp;: «&nbsp;GNOME
 signifie...&nbsp;»), il vous propose une traduction française pour vous alléger
 le travail.  Il ne s'agit que d'une simple suggestion&nbsp;; vous pouvez sans
@@ -1118,7 +1122,7 @@ Les lignes débutant par «&nbsp;#&nbsp;» sont des commentaires.
 <p>
 <li>
 Les lignes commençant par «&nbsp;From: Nom &lt;email@host.com&gt;&nbsp;»
-indique l'adresse électronique du traducteur l'adresse éléctronique du
+indique l'adresse électronique du traducteur l'adresse électronique du
 traducteur.  (Cette ligne est utile si le traducteur envoie son courrier à
 partir d'une autre adresse électronique).
 </li>
@@ -1190,11 +1194,11 @@ y relever les diverses corrections.
 
 <p>
 Il existe un script à <code><a
-href="http://perso.wanadoo.fr/nico.bertol/ddts/ddts-rev">http://perso.wanadoo.fr/nico.bertol/ddts/ddts-rev</a></code>
+href="http://perso.wanadoo.fr/nico.bertol/ddts/ddts-rev.txt">http://perso.wanadoo.fr/nico.bertol/ddts/ddts-rev.txt</a></code>
 en perl pour faciliter le travail.  Il vous faut tout d'abord paramétrer votre
 configuration dans le fichier <em>~/.ddts-rev</em>, un fichier d'exemple est
 fourni à <code><a
-href="http://perso.wanadoo.fr/nico.bertol/ddts/dot.ddts-rev">http://perso.wanadoo.fr/nico.bertol/ddts/dot.ddts-rev</a></code>,
+href="http://perso.wanadoo.fr/nico.bertol/ddts/dot.ddts-rev.txt">http://perso.wanadoo.fr/nico.bertol/ddts/dot.ddts-rev.txt</a></code>,
 il vous suffit de renseigner les variables avec les valeurs qui vous
 conviennent, des commentaires expliquent leur signification.
 
@@ -1235,18 +1239,18 @@ Pour plus d'information, lisez la documentation fournie avec le script :
 
 <p>
 Des fichiers d'exemple sont aussi fournis : un fichier <code><a
-href="http://perso.wanadoo.fr/nico.bertol/ddts/test">http://perso.wanadoo.fr/nico.bertol/ddts/test</a></code>à
+href="http://perso.wanadoo.fr/nico.bertol/ddts/test.txt">http://perso.wanadoo.fr/nico.bertol/ddts/test.txt</a></code>à
 relire, un fichier <code><a
-href="http://perso.wanadoo.fr/nico.bertol/ddts/test.relu">http://perso.wanadoo.fr/nico.bertol/ddts/test.relu</a></code>relu,
+href="http://perso.wanadoo.fr/nico.bertol/ddts/test.relu.txt">http://perso.wanadoo.fr/nico.bertol/ddts/test.relu.txt</a></code>relu,
 et l'adresse <code><a
-href="http://perso.wanadoo.fr/nico.bertol/ddts/test.sent">http://perso.wanadoo.fr/nico.bertol/ddts/test.sent</a></code>pour
+href="http://perso.wanadoo.fr/nico.bertol/ddts/test.sent.txt">http://perso.wanadoo.fr/nico.bertol/ddts/test.sent.txt</a></code>pour
 le courriel fabriqué.
 </p>
 
 <hr>
 
 <h4>
-<a name="s3.3.5.5">3.3.5.5 Profiter vous-même des traductions</a>
+<a name="s3.3.5.5">3.3.5.5 Profitez vous-même des traductions</a>
 </h4>
 
 <p>
@@ -1273,8 +1277,8 @@ déjà traduites.
 
 <p>
 Pas de méthode particulière.  Il faut ouvrir le document dans un éditeur de
-texte, et traduire bovinement.  Le plus difficile, c'est de vérifier que la
-page reste à jour.  Et je n'ai aucune idée de comment faire...
+texte, et tout traduire.  Le plus difficile, c'est de vérifier que la page
+reste à jour.  Et je n'ai aucune idée de comment faire...
 </p>
 
 <hr>
@@ -1295,7 +1299,7 @@ Aucune idée.  <em>Input welcome</em>...
 
 <p>
 Il faut faire attention à bien traduire le document source.  Par exemple, si la
-source est en <samp>XML</samp>, il vaut mieux ne pas traduire la convertion en
+source est en <samp>XML</samp>, il vaut mieux ne pas traduire la conversion en
 <samp>HTML</samp>.  Sinon, pas de méthode particulière, à part la classique
 ouverture dans un éditeur.
 </p>
@@ -1328,7 +1332,7 @@ l'internationalisation effective de Debian...
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.4<br>
+Version 1.5<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
