--- a/french/international/french/debian-l10n-french-faq.html/ch4.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch4.html
@@ -63,12 +63,12 @@ le format de sortie le plus élémentaire impose évidemment ses bornes aux autres
 formats.
 
 <p>
-Si vous désirez une sortie plus complète, tournez-vous vers le format
-<code>docbook</code> en <code>sgml</code>.
+Si vous désirez une sortie plus complète, tournez-vous vers la DTD
+<code>docbook</code> du <code>sgml</code>.
 
 <p>
 Si vous désirez faire changer les choses, n'hésitez surtout pas à vous
-retrousser les manches et corriger les choses vous même&nbsp;: la communauté
+retrousser les manches et corriger les choses vous-même&nbsp;: la communauté
 entière vous remerciera...
 </p>
 
@@ -106,7 +106,7 @@ traduction&nbsp;: Debian seule sera perdante sinon...
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.4<br>
+Version 1.5<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
