--- a/french/international/french/debian-l10n-french-faq.html/ch5.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch5.html
@@ -40,17 +40,17 @@ Chapitre 5 Règles typographiques de base
 </h3>
 
 <p>
-La langue française possède des règles typographique très strictes qu'il faut
+La langue française impose des règles typographique très strictes qu'il faut
 essayer de respecter.  La typographie est l'ensemble des règles de mise en page
-d'un document que ce soit la distance entre le mot, leur césure, leur
+d'un document que ce soit la distance entre les mots, leur césure, leur
 disposition ou bien l'usage de la ponctuation.
 
 <p>
 Bien entendu, on ne peut pas toujours respecter toutes les règles en usage pour
-la bonne raison que ces règles de mise en page ne sont valables que pour un
+la bonne raison que ces règles de mise en page ne sont applicables que pour un
 format qui permet de fixer la mise en page une fois pour toute.  Ces formats
 sont les suivants&nbsp;: le <code>dvi</code>, le <code>PostScript</code> et le
-<code>pdf</code>.  À noter que ces trois formats sont à peu près équivalent et
+<code>pdf</code>.  À noter que ces trois formats sont à peu près équivalents et
 que l'on passe sans trop de difficultés d'un format à l'autre.  L'inconvénient
 est que ces formats sont des formats binaires et qu'ils nécessitent donc des
 outils spécifiques pour leur lecture (respectivement <code>xdvi</code> et
@@ -68,16 +68,16 @@ en page facile à respecter pour deux raisons&nbsp;: la première est que la mise
 en page dépend du navigateur utilisé, de la fonte utilisée et de la façon dont
 la machine interprète le tout.  Comme il n'y a pas vraiment de standard de
 rendu, le résultat varie beaucoup d'un environnement à l'autre.  Deuxièment,
-certains formats comme le texte sont extrèmenent limités dans leur capacité de
+certains formats comme le texte sont extrêmement limités dans leur capacité de
 mise en page, ce qui impose évidemment de ne pas pouvoir respecter toutes les
 règles de typographie.
 
 <p>
 Un environnement bien fait devrait bien entendu gérer cela automatiquement.  Ce
-n'est pas encore le cas chez nous.  J'y travaille e j'ai espoir que cela se
+n'est pas encore le cas chez nous.  J'y travaille et j'ai espoir que cela se
 fasse avant le XXII-ième siècle.  En attendant, il faut faire avec et compenser
 nous-même les faiblesses du système.  Pour information, voici ce qui devrait
-être appliqué en ce qui concerne la typographie des signes de ponctuation.
+être appliqué en ce qui concerne la mise en page des signes de ponctuation.
 J'ai synthétisé tout cela dans un document que vous pouvez trouver à&nbsp;:\
 
 <p>
@@ -86,8 +86,8 @@ href="http://p.karatchentzeff.free/freesoft/TeX">http://p.karatchentzeff.free/fr
 
 <p>
 Voici un résumé très rapide.  On différencie deux types de ponctuation&nbsp;:
-la basse et al haute.  Elles sont définies par rapport à la ligne de base,
-c'est-à-dire la ligne virtuelle sur laquelle s'appuie les lettres pour
+la basse et la haute.  Elles sont définies par rapport à la ligne de base,
+c'est-à-dire la ligne virtuelle sur laquelle s'appuient les lettres pour
 s'aligner.  La ponctuation basse est composée des signes suivants&nbsp;: le
 point, la virgule et les points de suspension.  La ponctuation haute est
 composées du reste&nbsp;: le point-virgule, les deux-points, le point
@@ -135,7 +135,7 @@ vais donc modifier <code>debiandoc</code> en conséquence.  En attendant, on
 peut limiter beaucoup certains dégats malheureux.
 
 <p>
-On ne peut trnascrire aisément la finesse de la taille de l'espace préconisée
+On ne peut transcrire aisément la finesse de la taille de l'espace préconisée
 mais on peut toujours au moins en mettre une.  Et de plus la forcer à être
 insécable.  C'est le rôle de la balise sgml (reconnue par debiandoc et le wml)
 &amp;nbsp; (<em>no breaking space</em>).  Il vous faut donc écrire&nbsp;:
@@ -154,7 +154,7 @@ On est tous d'accord pour dire que c'est lourd mais c'est un pis-aller...&nbsp;
 en attendant une correction plus globale et automatisée.
 
 <p>
-Voici un pointeur chez nos amis de FreeBSB:
+Voici un pointeur chez nos amis de FreeBSD&nbsp;:
 
 <p>
 <code><a
@@ -180,11 +180,11 @@ sujet qu'une lettre capitale est une lettre comme les autres et doit être
 accentuée.  Pas besoin d'utiliser les artifices des premières version de HTM
 (&amp;eacute; pour «&nbsp;é&nbsp;») même si, techniquement, cela est
 parfaitement supporté.  Le problème est que cela rend la relecture très
-difficile.  Il y a suffisamment de balises indsipensables pour ne pas en
+difficile.  Il y a suffisamment de balises indispensables pour ne pas en
 ajouter d'autres.
 
 <p>
-Pour ceux qui aurait la malchance de travailler sous Microsoft Windows®, voici
+Pour ceux qui aurait la malchance de travailler sous Microsoft Windows ®, voici
 quelques combinaisons qui devraient vous aider&nbsp;:
 
 <pre>
@@ -203,13 +203,13 @@ quelques combinaisons qui devraient vous aider&nbsp;:
 </h4>
 
 <p>
-Le guillemets français sont le « pour le guillemet ouvrant et le » pour le
+Les guillemets français sont le « pour le guillemet ouvrant et le » pour le
 fermant.  Tout autre type de guillemet est <em>a priori</em> à proscrire.  Les
 notations américaines du genre &quot;&quot; ou bien `' sont donc à traduire.
 
 <p>
 On trouve exceptionnellement '' `` en français.  À utiliser plutôt dans
-l'imbrication de citations, par soucis de clareté.
+l'imbrication de citations, par soucis de clarté.
 </p>
 
 <hr>
@@ -219,7 +219,7 @@ l'imbrication de citations, par soucis de clareté.
 </h4>
 
 <p>
-Les mots étrangers cités dans votre traductions sont à mettre en évidence.  En
+Les mots étrangers cités dans votre traduction sont à mettre en évidence.  En
 typographie, on utilise généralement l'italique pour cela.  Ici, il vous faudra
 utiliser les balises &lt;em&gt; &lt;/em&gt;.  Voici une liste non exhaustive de
 termes à mettre en italique&nbsp;:
@@ -257,7 +257,7 @@ GNU-Linux&nbsp;: guide d'installation et d'utilisation&nbsp;».
 </h4>
 
 <p>
-Partie copiée-colée d'un courriel de Norbert (Je n'ai pas ton nom de famille).
+Partie copiée-collée d'un courriel de Norbert ?
 
 <p>
 On l'emploie aussi :
@@ -421,8 +421,8 @@ l'énumération n'a pas besoin de signe de ponctuation.
 </pre>
 
 <p>
-Un mot quand même pour ajouter que nos amis anglos ne prennent pas souvent soin
-d'être constants dans le choix de la catégorie grammaticale du mot débutant
+Un mot quand même pour ajouter que nos amis anglophones ne prennent pas souvent
+soin d'être constant dans le choix de la catégorie grammaticale du mot débutant
 chaque partie d'une énumération.  Si on choisit un verbe pour la première
 partie d'une énumération, on commencera toutes les autres parties de la même
 énumération par un verbe.  <em>Etc.</em>, <em>etc.</em>
@@ -446,9 +446,9 @@ La typographie anglophone utilise le «&nbsp;/&nbsp;».  La française utilise le
 </h4>
 
 <p>
-Bien que l'on doit bien sûr parler de Debian GNU-Linux, et non faire précéder
+Bien que l'on doive bien sûr parler de Debian GNU-Linux, et non faire précéder
 Debian d'un quelconque article défini ou non, on accordera les participes
-passées ainsi que les adjectifs qualifiant Debian au féminin faisant ainsi par
+passés ainsi que les adjectifs qualifiant Debian au féminin faisant ainsi par
 défaut de Debian une entité féminine.
 </p>
 
@@ -545,7 +545,7 @@ href="http://www.chez.com/languefrancaise/faq/faq.htm">http://www.chez.com/langu
 
 <p>
 (si vous trouvez un autre hébergeur que chez www.chez.com, signalez-le
-moi&nbsp;: leur publicité est vraiment fatiguante au possible.  Je changerai
+moi&nbsp;: leur publicité est vraiment fatigante au possible.  Je changerai
 l'adresse.)
 </p>
 
@@ -604,7 +604,7 @@ pratique qui réagit au copier UNIX de la souris.  Très bon outil.
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.4<br>
+Version 1.5<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
