--- a/french/international/french/debian-l10n-french-faq.html/index.html
+++ b/french/international/french/debian-l10n-french-faq.html/index.html
@@ -32,7 +32,7 @@ Ce document est la <em>foire aux questions</em> de la liste de diffusion de
 les questions les plus fréquemment posées sur la liste, de façon à répondre
 rapidement à toutes les questions que se posent les nouveaux arrivants.
 Veuillez donc lire avec attention le document suivant de façon à éviter de
-poser une question dont la réponse se trouve ci après.
+poser une question dont la réponse se trouve ci-après.
 
 <h2><a name="copyright">Copyright</a></h2>
 
@@ -52,7 +52,7 @@ pour le logiciel libre)&nbsp;»
 
 <p>
 <li>
-Youssef ?  (auteur original de la partie «&nbsp;Comment traduire les
+Youssef Oualmakran (auteur original de la partie «&nbsp;Comment traduire les
 descriptions de paquets Debian&nbsp;»)
 </li>
 
@@ -141,7 +141,7 @@ href="http://www.gnu.org/copyleft/gpl.html">http://www.gnu.org/copyleft/gpl.html
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.4<br>
+Version 1.5<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
